fix ck-editor z-index, enable filetypes for imageupload, disable special export parsing

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1764,6 +1764,10 @@ td {
   }
 }
 
+.ck-dropdown__arrow {
+  z-index: 0!important;
+}
+
 // Responsive container sizes
 @media screen and (min-width: 2000px) {
   .verification-page .container {
